<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Best Puzzle Game</string>
    <string name="your_ad_here">Your Ad Here</string>
    <string name="level_locked_can_unlock" formatted="false">You have to solve all puzzles in Pack %d. Or, you can unlock Pack %d right away.</string>
    <string name="level_locked" formatted="false">Please, solve all puzzles in %s first.</string>
    <string name="score">Score: %d</string>


    <string name="crash_toast_text">Ooooops ! I crashed, but a report is being prepared to be sent to my developer to help fix the issue !</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report…</string>
    <string name="crash_notif_title">Snappers have crashed…</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>

    <string name="crash_dialog_title">Snappers have crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>


    <string name="game_paused">Game paused</string>
    <string name="hints">Hints</string>
    <string name="free_hints">Free hints</string>

    <string name="youHaveOneHint">You have 1 hint.\nUse it?</string>
    <string name="youHave_n_Hints" formatted="false">You have %d hints.\nUse one?</string>
    <string name="youHaveNoHints">You\'ve got no hints.</string>
    <string name="buySome">Get some!</string>
    <string name="getOnline">Get online to get some.</string>

    <string name="game_won_1">Completed!</string>
    <string name="game_won_2">Good job!</string>
    <string name="game_won_3">Bravo!</string>
    <string name="game_won_4">Cheers!</string>
    <string name="game_won_5">Huzzah!</string>
    <string name="game_won_6">Yippee!</string>
    <string name="game_won_7">Hooray!</string>
    <string name="score">Score: %d</string>

    <string name="game_lost_1">Level failed</string>

    <string name="possible_in_touches" formatted="false">Possible in %d touches.</string>
    <string name="possible_in_1_touch">Possible in 1 touch.</string>
    <string name="level_n" formatted="false">Level: %d-%d</string>
    <string name="taps_left" formatted="false">Taps left: %d</string>
    <string name="new_level" formatted="false">You\'ve reached level %d!</string>
    <string name="settings">Settings</string>
    <string name="loginToFb">Login to FB</string>
    <string name="loggedToFb" formatted="false">Logged in as %s</string>
    <string name="loggedToFbNoName">Logged in</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="shareToFb">Share on FB</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="collect_now">Collect now!</string>
    <string name="received_bonus_hint">You\'ve received one bonus hint!</string>
    <string name="received_bonus_hints" formatted="false">You\'ve received %d bonus hints!</string>
    <string name="likeUrl" >http://www.facebook.com/SnappersApp</string>
    <string name="followUrl" >http://www.facebook.com/SnappersApp</string>
    <string name="marketUrl" >market://details?id=com.emerginggames.snappers</string>

    <string name="friends">Friends</string>
    <string name="invite">Invite</string>
    <string name="gift">Gift</string>
    <string name="notPlaying">not playing</string>
    <string name="sent">Sent</string>
    <string name="invited">Invited</string>

    <string name="inviteMessage" formatted="false">Hi %s! Download the free game Snappers 2 for Android of iPhone. Enter my code %s and get a bonus!</string>
    <string name="receivedGift" formatted="false">You\'ve received 1 hint from %s.</string>
    <string name="receivedGifts" formatted="false">You\'ve received %d hints from %s.</string>
    <string name="receivedGiftsMore" formatted="false">You\'ve received %d hints from %s and others.</string>
    <string name="someone">someone</string>
    <string name="twoFriends" formatted="false">%s and %s</string>
    <string name="showMore">Show more…</string>
    <string name="loading">Loading…</string>
    <string name="failedToGetUserInfo">Failed to get user info.</string>
    <string name="failedToGetFriends">Failed to get friends.</string>
    <string name="failedToGetData">Failed to get data.</string>
    <string name="pleaseRateUs" formatted="false">Enjoy playing?\nPlease, rate us 5 stars!</string>
    <string name="pleaseRateUs" formatted="false">Enjoy playing?\nPlease, rate us 5 stars!</string>
    <string name="enterCode">Enter code:</string>
    <string name="yourCodeIs" formatted="false">Your code is\n%s</string>
    <string name="cantUseOwnCode">You\'ve entered your own code. Please ask friends for their codes.</string>
    <string name="noSuchCode">No such code.</string>
    <string name="noSuchCodeLong">The code you\'ve entered is incorrect.</string>
    <string name="youVeGotHint">Congratulations! You\'ve received a free hint.</string>
    <string name="youVeGotHints" formatted="false">You\'ve got %d hints.</string>
    <string name="pleaseWait" >Please, wait…</string>
    <string name="rateUs">Enjoyed playing?\nPlease, rate us 5 stars!</string>
    <string name="likeUs">Enjoyed playing?\nPlease, like us on Facebook!</string>
    <string name="share">Share your success with friends and get a free hint!</string>
    <string name="shareMessage" formatted="false">I\'ve just reached level %d in Snappers! Can you beat that? Download the free game Snappers 2 for iPhone or Android, enter my code %s and get a bonus!</string>
    <string name="inviteFriends">Invite some friends to be able to receive FREE gifts!</string>
    <string name="needFacebook">Please, go back to Settings and login to Facebook first!</string>

    <string name="maxLevel">max level</string>

</resources>
